k8s/example/deployment/api-gateway.yaml
#---------- Service ----------
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 8765
  type: NodePort
  
---
#---------- Deployment ----------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: <CONTAINER_REGISTRY_HERE>/portfolio-api-gateway:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8765
              protocol: TCP
          imagePullPolicy: Always
      imagePullSecrets:
          - name: registry-secret
      serviceAccountName: portfolio-microservices-service-account
