k8s/example/deployment/authentication-service.yaml
#---------- Service ----------
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  labels:
    app: authentication-service
spec:
  selector:
    app: authentication-service
  ports:
    - port: 80
      targetPort: 8083
  type: NodePort
  
---
#---------- Deployment ----------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
  labels:
    app: authentication-service
spec:
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
        - name: authentication-service
          image: <CONTAINER_REGISTRY_HERE>/portfolio-authentication-service:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8083
              protocol: TCP
          imagePullPolicy: Always
      imagePullSecrets:
          - name: registry-secret
      serviceAccountName: portfolio-microservices-service-account
