k8s/example/deployment/portfolio-data-service.yaml
#---------- Service ----------
apiVersion: v1
kind: Service
metadata:
  name: portfolio-data-service
  labels:
    app: portfolio-data-service
spec:
  selector:
    app: portfolio-data-service
  ports:
    - port: 80
      targetPort: 8084
  type: NodePort
  
---
#---------- Deployment ----------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-data-service
  labels:
    app: portfolio-data-service
spec:
  selector:
    matchLabels:
      app: portfolio-data-service
  template:
    metadata:
      labels:
        app: portfolio-data-service
    spec:
      containers:
        - name: portfolio-data-service
          image: <CONTAINER_REGISTRY_HERE>/portfolio-portfolio-data-service:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8084
              protocol: TCP
          imagePullPolicy: Always
      imagePullSecrets:
          - name: registry-secret
      serviceAccountName: portfolio-microservices-service-account
