k8s/example/deployment/storage-service.yaml
#---------- Service ----------
apiVersion: v1
kind: Service
metadata:
  name: storage-service
  labels:
    app: storage-service
spec:
  selector:
    app: storage-service
  ports:
    - port: 80
      targetPort: 8082
  type: NodePort
  
---
#---------- Deployment ----------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-service
  labels:
    app: storage-service
spec:
  selector:
    matchLabels:
      app: storage-service
  template:
    metadata:
      labels:
        app: storage-service
    spec:
      containers:
        - name: storage-service
          image: <CONTAINER_REGISTRY_HERE>/portfolio-storage-service:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8082
              protocol: TCP
          imagePullPolicy: Always
      imagePullSecrets:
          - name: registry-secret
      serviceAccountName: portfolio-microservices-service-account
